--- a/ClassroomAutomation/project.json
+++ b/ClassroomAutomation/project.json
@@ -8,13 +8,13 @@
     "UiPath.Mail.Activities": "[1.20.0]",
     "UiPath.System.Activities": "[23.4.3]",
     "UiPath.Testing.Activities": "[23.4.1]",
-    "UiPath.UIAutomation.Activities": "[23.4.6]"
+    "UiPath.UIAutomation.Activities": "[23.4.7]"
   },
   "webServices": [],
   "entitiesStores": [],
   "schemaVersion": "4.0",
   "studioVersion": "23.4.2.0",
-  "projectVersion": "1.0.0",
+  "projectVersion": "1.0.1",
   "runtimeOptions": {
     "autoDispose": false,
     "netFrameworkLazyLoading": false,
@@ -100,6 +100,8 @@
   ],
   "isTemplate": false,
   "templateProjectData": {},
-  "publishData": {},
+  "publishData": {
+    "iconUrl": ".package/Classroom.png"
+  },
   "targetFramework": "Windows"
 }
